<resources>
    <string name="app_name">Formula1App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_5_marzo">5 Marzo</string>
    <string name="bahrein_ngrand_prix">BAHREIN \nGRAND PRIX</string>
    <string name="bahrein_ninternational_circuit">BAHREIN \nINTERNATIONAL \nCIRCUIT</string>
    <string name="emilian_ngrand_prix">EMILIAN \nGRAND PRIX</string>
    <string name="_21_maggio_2023">21 Maggio 2023</string>
    <string name="_19_21_may">19 - 21 MAY</string>
    <string name="web_client_id">253752480176-4ij5114or5hbc48glkh961l5au6bpj18.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="scrivi_un_messaggio">Scrivi un messaggio</string>
    <string name="results">RESULTS</string>
    <string name="pos">POS</string>
    <string name="q1">Q1</string>
    <string name="q2">Q2</string>
    <string name="q3">Q3</string>
    <string name="data_not_yet_available">DATA NOT YET AVAILABLE</string>
    <string name="driver">DRIVER</string>
    <string name="qualifying_results">QUALIFYING</string>
    <string name="grand_prix_name">Grand Prix Name</string>
    <string name="sprint">SPRINT</string>
    <string name="race">RACE</string>
    <string name="fastest_lap">FASTEST LAP</string>
    <string name="driver_FLAP">(DRIVER)</string>
    <string name="flap_placeholder">-:--:---</string>
    <string name="race_results">RACE RESULTS</string>
    <string name="pts">PTS</string>
    <string name="time">TIME</string>
    <string name="race_distance">RACE DISTANCE</string>
</resources>