<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RaceResultsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">

        <ImageView
            android:id="@+id/raceResultsButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-18dp"
            android:src="@drawable/race_results_header"
            app:layout_constraintBottom_toTopOf="@+id/imageView28"
            app:layout_constraintStart_toStartOf="@+id/imageView28"
            app:layout_constraintTop_toBottomOf="@+id/fLapBackgroundRaceResults" />

        <ImageView
            android:id="@+id/sprintResultsButton"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-18dp"
            android:src="@drawable/race_results_header_grey"
            app:layout_constraintBottom_toTopOf="@+id/imageView28"
            app:layout_constraintEnd_toEndOf="@+id/imageView28"
            app:layout_constraintTop_toBottomOf="@+id/fLapBackgroundRaceResults" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="375dp"
            android:layout_height="80dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/white_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fLapBackgroundRaceResults"
            android:layout_width="375dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/white_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView25" />

        <TextView
            android:id="@+id/fLapTextViewRaceResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/formula1_bold"
            android:text="@string/fastest_lap"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/fLapBackgroundRaceResults"
            app:layout_constraintStart_toStartOf="@+id/fLapBackgroundRaceResults"
            app:layout_constraintTop_toTopOf="@+id/fLapBackgroundRaceResults" />

        <TextView
            android:id="@+id/fLapRaceResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="45dp"
            android:fontFamily="@font/formula1_regular"
            android:text="@string/flap_placeholder"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/fLapBackgroundRaceResults"
            app:layout_constraintTop_toTopOf="@+id/fLapBackgroundRaceResults" />

        <TextView
            android:id="@+id/fLapOwnerRaceResults"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/formula1_regular"
            android:text="@string/driver_FLAP"
            android:textColor="#000000"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/fLapRaceResults"
            app:layout_constraintStart_toStartOf="@+id/fLapRaceResults"
            app:layout_constraintTop_toBottomOf="@+id/fLapRaceResults" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/formula1_bold"
            android:text="@string/race_results"
            android:textColor="#000000"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView25"
            app:layout_constraintStart_toStartOf="@+id/imageView25"
            app:layout_constraintTop_toTopOf="@+id/imageView25" />

        <TextView
            android:id="@+id/raceResultsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/formula1_regular"
            android:text="@string/grand_prix_name"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/textView9"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <ImageView
            android:id="@+id/imageView28"
            android:layout_width="375dp"
            android:layout_height="35dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/race_results_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fLapBackgroundRaceResults" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/formula1_regular"
            android:text="@string/pos"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/imageView28"
            app:layout_constraintStart_toStartOf="@+id/imageView28"
            app:layout_constraintTop_toTopOf="@+id/imageView28" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/formula1_regular"
            android:text="@string/driver"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/imageView28"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="@+id/imageView28"
            app:layout_constraintVertical_bias="0.529" />

        <TextView
            android:id="@+id/q1QualifyingTimeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="74dp"
            android:fontFamily="@font/formula1_regular"
            android:text="@string/time"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/imageView28"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/imageView28"
            app:layout_constraintVertical_bias="0.529" />

        <TextView
            android:id="@+id/q2QualifyingTimeHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:fontFamily="@font/formula1_regular"
            android:text="@string/pts"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/imageView28"
            app:layout_constraintStart_toEndOf="@+id/q1QualifyingTimeHeader"
            app:layout_constraintTop_toTopOf="@+id/imageView28"
            app:layout_constraintVertical_bias="0.529" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/raceResultsRecyclerView"
            android:layout_width="375dp"
            android:layout_height="0dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/list_view_race_results_background"
            android:dividerHeight="5dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView28">

        </androidx.recyclerview.widget.RecyclerView>

        <ImageView
            android:id="@+id/raceResultsBlackLine"
            android:layout_width="90dp"
            android:layout_height=".8dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/black_line"
            app:layout_constraintEnd_toEndOf="@+id/raceResultsButton"
            app:layout_constraintStart_toStartOf="@+id/raceResultsButton"
            app:layout_constraintTop_toTopOf="@+id/raceResultsButton" />

        <ImageView
            android:id="@+id/sprintResultsBlackLine"
            android:layout_width="90dp"
            android:layout_height=".8dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/black_line"
            app:layout_constraintEnd_toEndOf="@+id/sprintResultsButton"
            app:layout_constraintStart_toStartOf="@+id/sprintResultsButton"
            app:layout_constraintTop_toTopOf="@+id/sprintResultsButton" />

        <TextView
            android:id="@+id/raceResultsButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/formula1_bold"
            android:text="@string/race"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/raceResultsButton"
            app:layout_constraintStart_toStartOf="@+id/raceResultsButton"
            app:layout_constraintTop_toTopOf="@+id/raceResultsButton" />

        <TextView
            android:id="@+id/sprintResultsButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/formula1_bold"
            android:text="@string/sprint"
            android:textColor="#070707"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/sprintResultsButton"
            app:layout_constraintStart_toStartOf="@+id/sprintResultsButton"
            app:layout_constraintTop_toTopOf="@+id/raceResultsButton" />

        <ImageView
            android:id="@+id/raceResultsNotAvailableOverlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/white_line"
            app:layout_constraintBottom_toBottomOf="@+id/raceResultsRecyclerView"
            app:layout_constraintEnd_toEndOf="@+id/raceResultsRecyclerView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/raceResultsRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/imageView25"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/raceResultsNotAvailableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="159dp"
            android:layout_marginEnd="11dp"
            android:fontFamily="@font/formula1_regular"
            android:text="@string/data_not_yet_available"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/raceResultsNotAvailableOverlay"
            app:layout_constraintStart_toStartOf="@+id/raceResultsNotAvailableOverlay"
            app:layout_constraintTop_toTopOf="@+id/raceResultsNotAvailableOverlay" />

        <ImageView
            android:id="@+id/RaceResultsBackArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/back_arrow_black"
            app:layout_constraintBottom_toBottomOf="@+id/imageView25"
            app:layout_constraintStart_toStartOf="@+id/imageView25"
            app:layout_constraintTop_toTopOf="@+id/imageView25"
            app:layout_constraintVertical_bias="0.52" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>